add execution_time decorator

--- a/mohammad_workspace/test.ipynb
+++ b/mohammad_workspace/test.ipynb
@@ -103,12 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10527.1756113"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import os\n",
-    "# dir_root=os.path.normpath(os.getcwd() + os.sep + os.pardir)"
+    "# dir_root=os.path.normpath(os.getcwd() + os.sep + os.pardir)\n",
+    "\n",
+    "        \n"
    ]
   },
   {
