--- a/mohammad_workspace/test.ipynb
+++ b/mohammad_workspace/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_name = 'test.csv'\n",
+    "dataset_name = 'test_2.csv'\n",
     "dataset_path=f'{parentdir}/dataset/{dataset_name}'\n",
     "x = Dataset(dataset_path)"
    ]
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +79,12 @@
     "            self.sample_weight=np.array(sample_weight)\n",
     "        else:\n",
     "            self.sample_weight=np.ones(self.n)\n",
+    "       \n",
     "        self.sample_weight=self.sample_weight.reshape((-1,1)) \n",
     "        # line 1\n",
     "        beta=self.sample_weight/np.sum(self.sample_weight)\n",
     "        # line 2\n",
+    "\n",
     "        m=np.vstack((self.m,new_seed(self.X,1,beta)))\n",
     "        # line 3\n",
     "        alpha=np.array([np.inf]*self.n).reshape((-1,1))\n",
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +258,8 @@
     "def runner(iter:int,k:int):\n",
     "    dis = []\n",
     "    for i in range(iter):\n",
-    "        t.fit(k)\n",
-    "        dis.append(distance(t.m[0], t.m[1]))\n",
+    "        t.fit(k,5,k*2)\n",
+    "        dis.append(distance(t.c[0], t.c[1]))\n",
     "    # plt.scatter(akpp.X[:, 0], akpp.X[:, 1])\n",
     "    # plt.scatter(akpp.m[:, 0], akpp.m[:, 1])\n",
     "    # plt.show()\n",
@@ -287,29 +289,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "func:runner took: 3.180424928665161 sec\n"
+      "(23, 1)\n",
+      "2 (23, 2) (23, 1) (23, 1)\n",
+      "func:fit took: 7.534698247909546 sec\n",
+      "(18, 1)\n",
+      "2 (18, 2) (18, 1) (18, 1)\n",
+      "func:fit took: 5.924683094024658 sec\n",
+      "(22, 1)\n",
+      "2 (22, 2) (22, 1) (22, 1)\n",
+      "func:fit took: 7.827466726303101 sec\n",
+      "(29, 1)\n",
+      "2 (29, 2) (29, 1) (29, 1)\n",
+      "func:fit took: 9.445509195327759 sec\n",
+      "(25, 1)\n",
+      "2 (25, 2) (25, 1) (25, 1)\n",
+      "func:fit took: 7.908327579498291 sec\n",
+      "(15, 1)\n",
+      "2 (15, 2) (15, 1) (15, 1)\n",
+      "func:fit took: 4.685130596160889 sec\n",
+      "(19, 1)\n",
+      "2 (19, 2) (19, 1) (19, 1)\n",
+      "func:fit took: 5.8339457511901855 sec\n",
+      "(20, 1)\n",
+      "2 (20, 2) (20, 1) (20, 1)\n",
+      "func:fit took: 6.877811908721924 sec\n",
+      "(22, 1)\n",
+      "2 (22, 2) (22, 1) (22, 1)\n",
+      "func:fit took: 6.148748397827148 sec\n",
+      "(24, 1)\n",
+      "2 (24, 2) (24, 1) (24, 1)\n",
+      "func:fit took: 8.985345363616943 sec\n",
+      "func:runner took: 71.17266631126404 sec\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "68.86051221630854"
+       "66.0438172011608"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "runner(1000,2)"
+    "t=kll(x)\n",
+    "# c=t.fit(2,5,4)\n",
+    "runner(10,2)"
    ]
   },
   {
@@ -344,36 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24 24\n",
-      "24 24\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36432\\2875898608.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 85\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     86\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mm:\\uni\\SPR\\final\\imp\\Exact-Acceleration-of-K-Means-and-K-Means-parallel\\tools.py\u001b[0m in \u001b[0;36mwrap\u001b[1;34m(*args, **kw)\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mwrap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[0mte\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'func:{f.__name__} took: {te-ts} sec'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36432\\2875898608.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, number_of_cluster, rounds, oversampling_factor, sample_weight)\u001b[0m\n\u001b[0;32m     79\u001b[0m         \u001b[0mkpp_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkpp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mkpp_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36432\\576873003.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, number_of_cluster, sample_weight)\u001b[0m\n\u001b[0;32m     32\u001b[0m             \u001b[1;34m'number of cluster should be in range [1,n)'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+      "Writing kll.py\n"
      ]
     }
    ],
    "source": [
-    "# import numpy as np\n",
-    "# from dataset import Dataset\n",
-    "# from tools import distance, new_seed, execution_time\n",
+    "%%file kll.py\n",
+    "import numpy as np\n",
+    "from dataset import Dataset\n",
+    "from tools import distance, new_seed, execution_time\n",
     "\n",
     "\n",
     "# algorithm 3 K-Means ||\n",
@@ -409,6 +429,7 @@
     "            self.sample_weight = np.array(sample_weight)\n",
     "        else:\n",
     "            self.sample_weight = np.ones(self.n)\n",
+    "       \n",
     "        self.sample_weight = self.sample_weight.reshape((-1, 1))\n",
     "        # line 1 algorithm 1\n",
     "        beta = self.sample_weight/np.sum(self.sample_weight)\n",
@@ -437,27 +458,28 @@
     "                    k+=1\n",
     "                    c=np.vstack((c, self.X[i]))\n",
     "                    alpha[i]=0\n",
-    "        print(len(c),k)\n",
+    "       \n",
     "        # line 13 algorithm 3\n",
+    "        wp=np.empty((0,1))\n",
     "        for i in range(c.shape[0]):\n",
     "            s=0\n",
     "            for j in range(self.n):\n",
     "                wj=self.sample_weight[j]\n",
     "                indic= 1 if distance(self.X[j], c[i])==alpha[j] else 0\n",
     "                s+=wj*indic\n",
-    "            self.sample_weight[i]=s\n",
-    "\n",
+    "           \n",
+    "            wp=np.vstack((wp,s))\n",
+    "        self.c=c\n",
     "        # line 14 algorithm 3\n",
-    "        print(len(c),k)\n",
     "        kpp_=kpp(Dataset(np.array(c)))\n",
     "\n",
-    "        return kpp_.fit(self.K,self.sample_weight)\n",
+    "        return kpp_.fit(self.K,wp)\n",
     "            \n",
     "\n",
-    "t=kll(x)\n",
-    "c=t.fit(2,5,4)\n",
-    "plt.scatter(t.X[:,0],t.X[:,1])\n",
-    "plt.scatter(c[:,0],c[:,1])\n"
+    "# t=kll(x)\n",
+    "# c=t.fit(2,5,4)\n",
+    "# plt.scatter(t.X[:,0],t.X[:,1])\n",
+    "# plt.scatter(c[:,0],c[:,1])\n"
    ]
   },
   {
@@ -552,7 +574,7 @@
     }
    ],
    "source": [
-    "if 1==1 "
+    "if 1==1 :"
    ]
   },
   {
@@ -654,6 +676,64 @@
    ],
    "source": [
     "x.number_of_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=np.empty((0,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 20), dtype=float64)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=np.vstack((f,np.array([1,2])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2.]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
